# testNk

./: CMakeLists.txt  build_tests.sh  conanfile.txt  task
src/: FindDepth.cpp  FindDepth.h  FirstNPrimeNumers.cpp  FirstNPrimeNumers.h  MaxAndMinNumber.cpp  MaxAndMinNumber.h  RemoveListElems.cpp  RemoveListElems.h  TextAndLetters.cpp  TextAndLetters.h  main.cpp
